# axis

./: .gitignore  Cargo.toml  Cross.toml  README.md  index.html  stydl.html  style.css  template.css  template.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: args.rs  audio.rs  filter.rs  flags.rs  lib.rs  main.rs  resampler.rs  util.rs
src/api/: config.rs  db.rs  mod.rs  plugin.rs
src/vocoder/: d4c.rs  dio.rs  hmm.rs  mod.rs  stydl.rs  synthesis.rs  transient.rs  trickresolve.rs
test/: test.ustx
