[package]
name = "axis"
version = "0.1.2-rc1"
edition = "2021"

[dependencies]
rsworld = "0.1.0"
symphonia = { version = "0.5.5", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rsworld-sys = "0.1.0"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
biquad = "0.5.0"
kdl = "6.5.0"
rusqlite = "0.38.0"
libloading = "0.9.0"
directories = "6.0.0"
knuffel = "3.2.0"
tokio = { version = "1.49.0", features = ["full"] }
